k8s/ntfy/ntfy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy-test
  namespace: lutergs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ntfy
  template:
    metadata:
      labels:
        app: ntfy
    spec:
      containers:
        - name: ntfy
          image: binwiederhier/ntfy
          args: ["serve"]
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 80
              name: http
