k8s/ntfy/ingress.yml
---
# ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ntfy-ingress
  namespace: lutergs
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ntfy2.lutergs.dev
      secretName: ntfy2-lutergs-dev-tls
  rules:
    - host: ntfy2.lutergs.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ntfy-test
                port:
                  number: 80
